Try out Ax optimization

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ kaggle = "^1.6.17"
 pyarrow = "^17.0.0"
 graphviz = "^0.20.3"
 cupy-cuda12x = "^13.3.0"
+ax-platform = "^0.4.3"
 
 
 [build-system]
