--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ pyarrow = "^17.0.0"
 graphviz = "^0.20.3"
 cupy-cuda12x = "^13.3.0"
 ax-platform = "^0.4.3"
+imbalanced-learn = "^0.12.4"
+lightgbm = "^4.5.0"
+catboost = "^1.2.7"
 
 
 [build-system]
